--- a/src/main/webapp/WEB-INF/views/phone-list.html
+++ b/src/main/webapp/WEB-INF/views/phone-list.html
@@ -45,6 +45,6 @@
     </tr>
     </tbody>
 </table>
-<a href="/" class="btn btn-secondary mt-3">Quay lại Trang chủ</a>
+<a th:href="@{/}" class="btn btn-secondary mt-3">Quay lại Trang chủ</a>
 </body>
 </html>
