--- a/src/main/webapp/WEB-INF/views/phone-form.html
+++ b/src/main/webapp/WEB-INF/views/phone-form.html
@@ -38,7 +38,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Lưu</button>
-    <a href="/phones" class="btn btn-secondary">Hủy</a>
+    <a th:href="@{/phones}" class="btn btn-secondary">Hủy</a>
 </form>
 </body>
 </html>
